src/test/ui/generator/yield-in-args.stderr
error[E0626]: borrow may still be in use when generator yields
  --> $DIR/yield-in-args.rs:8:14
   |
LL |         foo(&b, yield); //~ ERROR
   |              ^  ----- possible yield occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0626`.
